[project]
authors = [
    {name = "Will McGugan", email = "will@textualize.io"},
]
license = {text = "MIT"}
requires-python = ">=3.8.1"
dependencies = [
    "markdown-it-py[linkify,plugins]>=2.1.0",
    "rich>=13.3.3",
    "typing-extensions>=4.4.0,<5.0.0",
    "platformdirs>=3.6.0,<5",
]
name = "textual"
version = "3.2.0"
description = "Modern Text User Interface framework"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.ruff]
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -n 16 --dist=loadgroup"
markers = [
    "syntax: marks tests that require syntax highlighting (deselect with '-m \"not syntax\"')",
    "xdist_group"
]
asyncio_default_fixture_loop_scope = "function"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project.urls]
"Bug Tracker" = "https://github.com/Textualize/textual/issues"
homepage = "https://github.com/Textualize/textual"
repository = "https://github.com/Textualize/textual"
documentation = "https://textual.textualize.io/"

[project.optional-dependencies]
syntax = [
    "tree-sitter>=0.21.3",
    "tree-sitter>=0.23.0; python_version >= \"3.9\"",
    "tree-sitter-python>=0.23.0; python_version >= \"3.9\"",
    "tree-sitter-markdown>=0.3.0; python_version >= \"3.9\"",
    "tree-sitter-json>=0.24.0; python_version >= \"3.9\"",
    "tree-sitter-toml>=0.6.0; python_version >= \"3.9\"",
    "tree-sitter-yaml>=0.6.0; python_version >= \"3.9\"",
    "tree-sitter-html>=0.23.0; python_version >= \"3.9\"",
    "tree-sitter-css>=0.23.0; python_version >= \"3.9\"",
    "tree-sitter-javascript>=0.23.0; python_version >= \"3.9\"",
    "tree-sitter-rust>=0.23.3; python_version >= \"3.9\"",
    "tree-sitter-go>=0.23.0; python_version >= \"3.9\"",
    "tree-sitter-regex>=0.24.0; python_version >= \"3.9\"",
    "tree-sitter-xml>=0.7.0; python_version >= \"3.9\"",
    "tree-sitter-sql<0.3.8,>=0.3.0; python_version >= \"3.9\"",
    "tree-sitter-java>=0.23.0; python_version >= \"3.9\"",
    "tree-sitter-bash>=0.23.0; python_version >= \"3.9\"",
]

[dependency-groups]
dev = [
    "black==24.4.2",
    "griffe==0.32.3",
    "httpx<1.0.0,>=0.23.1",
    "mkdocs<2.0.0,>=1.3.0",
    "mkdocs-exclude<2.0.0,>=1.0.2",
    "mkdocs-git-revision-date-localized-plugin<2.0.0,>=1.2.5",
    "mkdocs-material<10.0.0,>=9.0.11",
    "mkdocs-rss-plugin<2.0.0,>=1.5.0",
    "mkdocstrings[python]<1.0.0,>=0.20.0",
    "mkdocstrings-python<2.0.0,>=1.0.0",
    "mypy<2.0.0,>=1.0.0",
    "pre-commit<3.0.0,>=2.13.0",
    "pytest<9.0.0,>=8.3.1",
    "pytest-xdist<4.0.0,>=3.6.1",
    "pytest-asyncio",
    "pytest-cov<6.0.0,>=5.0.0",
    "textual-dev<2.0.0,>=1.7.0",
    "types-setuptools<68.0.0.0,>=67.2.0.1",
    "isort<6.0.0,>=5.13.2",
    "pytest-textual-snapshot>=1.0.0,<2.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual"]
